<resources>
    <string name="app_name">Calculator</string>
    <string name="textview">TextView</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="clear">C</string>
    <string name="parentheses">( )</string>
    <string name="divide">%</string>
    <string name="multiply">*</string>
    <string name="add">+</string>
    <string name="substract">-</string>
    <string name="plusMinus">+/-</string>
    <string name="point">.</string>
    <string name="equals">=</string>
    <string name="clearOne">←</string>
    <string name="root">√</string>
    <string name="onedivedeX">1/X</string>

    <string name="MC">MC</string>
    <string name="MR">MR</string>
    <string name="MS">MS</string>
    <string name="Mplus">M+</string>
    <string name="Mminus">M-</string>

    <string name="display">Enter in a value</string>
</resources>